--- a/frontend/src/shared/assets/styles/common.scss
+++ b/frontend/src/shared/assets/styles/common.scss
@@ -1,26 +1,16 @@
-*,
-::after,
-::before {
-  border: none;
-}
-
-button {
-  cursor: pointer;
-
-  &:disabled {
-    pointer-events: none;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: 'Anuphan', sans-serif;
+  font-family: 'Geist', sans-serif !important;
   color: #000;
   background-color: #fff;
   font-variant-numeric: lining-nums proportional-nums;
 
   @supports not (font-variation-settings: 'wdth' 115) {
     & {
-      font-family: 'Anuphan-Fallback', sans-serif;
+      font-family: 'Geist-Fallback', sans-serif;
     }
   }
 
