--- a/frontend/src/shared/assets/styles/fonts.scss
+++ b/frontend/src/shared/assets/styles/fonts.scss
@@ -1,62 +1,15 @@
 @font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 100;
-  src: url('/fonts/Anuphan-Thin.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 200;
-  src: url('/fonts/Anuphan-ExtraLight.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 300;
-  src: url('/fonts/Anuphan-Light.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 400;
-  src: url('/fonts/Anuphan-Regular.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 500;
-  src: url('/fonts/Anuphan-Medium.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 600;
-  src: url('/fonts/Anuphan-SemiBold.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan-Fallback';
-  font-weight: 700;
-  src: url('/fonts/Anuphan-Bold.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Anuphan';
-  src: url('/fonts/anuphan-variable.woff2') format('woff2-variations');
-  font-weight: 100 700;
-  font-stretch: 75% 125%;
+  font-family: "Geist";
+  src: url("/fonts/Geist[wght].ttf") format("truetype-variations");
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Geist';
-  src: url('https://fonts.googleapis.com/css2?family=Geist&display=swap');
+  font-family: "Geist-Fallback";
+  src: url("/fonts/Geist[wght].woff2") format("woff2-variations");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
 }
