--- a/frontend/src/shared/ui/Containers/GrayContainer/styles/container.module.scss
+++ b/frontend/src/shared/ui/Containers/GrayContainer/styles/container.module.scss
@@ -1,10 +1,5 @@
 .grayContainer {
-    background-color: rgb(240, 240, 240);
-    padding: 10px;
-    width: fit-content;
-    height: fit-content;
-
-    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24) inset;
-    -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24) inset;
-    -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24) inset;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24) inset;
+  -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24) inset;
+  -moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24) inset;
 }
