--- a/frontend/src/shared/ui/Containers/WhiteContainer/styles/container.module.scss
+++ b/frontend/src/shared/ui/Containers/WhiteContainer/styles/container.module.scss
@@ -1,10 +1,8 @@
 .whiteContainer {
-    background-color: #FFF;
-    padding: 10px;
-    width: fit-content;
-    height: fit-content;
+  background-color: #fff;
+  padding: 10px;
 
-    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24);
-    -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24);
-    -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.24);
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.24);
 }
