--- a/frontend/src/components/home/styles/medium_card.module.scss
+++ b/frontend/src/components/home/styles/medium_card.module.scss
@@ -19,12 +19,12 @@
 }
 
 .dotsBackground {
-  background-image: url("../assets/backgrounds/medium-card-background-first.svg");
+  background-image: url("../../../../public/images/backgrounds/medium-card-background-first.svg");
   background-position: center;
 }
 
 .linesBackground {
-  background-image: url('../assets/backgrounds/medium-card-background-second.svg');
+  background-image: url('@public/images/backgrounds/medium-card-background-second.svg');
   background-repeat: no-repeat;
   background-position: right;
 }
