--- a/frontend/src/components/home/styles/large_card.module.scss
+++ b/frontend/src/components/home/styles/large_card.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   padding-left: 30px;
   grid-column: span 2 / span 2;
-  background-image: url('../assets/backgrounds/medium-card-background-second.svg');
+  background-image: url('../../../../public/images/backgrounds/medium-card-background-second.svg');
   background-repeat: no-repeat;
   background-position: right;
 
